Fix crash when filtering collections.

As reported on e.g. https://bugs.kde.org/show_bug.cgi?id=444408
Seems to happen at least when filtered results are found under both
various artists and under single artists.
Reading docs ( https://doc.qt.io/qt-5/qmodelindex.html ),
"If you need to keep a model index over time use a
QPersistentModelIndex." is probably relevant here. I didn't do too
deep analysis on the paths leading here, but the crash is caused when
the cast at row 444 of CollectionTreeItemModelBase.cpp is erroneous
(parent.internalPointer() seemed to be a non-QObject). So something
causes a data-changing change when both kinds of results are in the
filtering. Seems to be fixed by having a QPersistentModelIndex
instead.

BUG: 444408